# onnx_dynamic_load

./: .gitmodules  CMakeLists.txt  README.md
include/: library_loader.h  onnxruntime_api_wrap.h  onnxruntime_c_api.h
include/utilis/: Defer.h  NonCopyable.h
src/: library_loader.cc  onnx_dynamic_loader.cc  onnxr_dynamic_loader.cc  onnxruntime_api_wrap.cc
